Логика получения размеров посылки вынесена в отдельный класс BoxSizesUtil. TruckSpaceFinder и BoxesManager (BoxesReaderService) вынесены в сервисы - убрана статика. Изменено название метода isValidData -> validate и тип возвращаемого значения boolean -> void. При невалидных данных выбрасываем исключение ValidationException