@@ -3,51 +3,40 @@ package ru.kovalev.boxesloader.service;
 import org.junit.jupiter.api.Test;
 import ru.kovalev.boxesloader.exception.OversizedBoxException;
 import ru.kovalev.boxesloader.model.Truck;
-import ru.kovalev.boxesloader.util.BoxesManager;
-import java.nio.file.Path;
+
+import java.util.Collections;
 import java.util.List;
+
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 class BoxesLoaderServiceTest {
-    private static final BoxesLoaderService boxesLoaderService = new BoxesLoaderService();
     private static final int TRUCK_BODY_SIZE = 6;
+    private final BoxesLoaderService boxesLoaderService = new BoxesLoaderService(new TruckSpaceFinder());
     private List<String> boxes;
 
     @Test
     void whenBoxesIsEmptyThenTrucksIsEmpty() {
-        boxes = List.of();
-        List<Truck> trucks = boxesLoaderService.distributeBoxes(boxes, TRUCK_BODY_SIZE);
+        List<Truck> trucks = boxesLoaderService.distributeBoxes(Collections.emptyList(), TRUCK_BODY_SIZE);
         assertThat(trucks).isEmpty();
     }
 
     @Test
     void whenBoxesIsNullThenTrucksIsEmpty() {
-        boxes = null;
-        List<Truck> trucks = boxesLoaderService.distributeBoxes(boxes, TRUCK_BODY_SIZE);
-        assertThat(trucks).isEmpty();
-    }
-
-    @Test
-    void trucksEmptyIfInputFileEmpty() {
-        Path path = Path.of("src", "test", "resources", "for_empty_trucks.txt");
-        boxes = BoxesManager.getBoxes(path);
-        List<Truck> trucks = boxesLoaderService.distributeBoxes(boxes, TRUCK_BODY_SIZE);
+        List<Truck> trucks = boxesLoaderService.distributeBoxes(null, TRUCK_BODY_SIZE);
         assertThat(trucks).isEmpty();
     }
 
     @Test
     void boxesAreLoadedIntoOneTruck() {
-        Path path = Path.of("src", "test", "resources", "for_one_trucks.txt");
-        boxes = BoxesManager.getBoxes(path);
+        boxes = List.of("9", "6", "5", "1", "1", "3");
         List<Truck> trucks = boxesLoaderService.distributeBoxes(boxes, TRUCK_BODY_SIZE);
         assertThat(trucks).hasSize(1);
     }
 
     @Test
     void twoTrucksIfBoxDoesNotFit() {
-        Path path = Path.of("src", "test", "resources", "for_two_trucks.txt");
-        boxes = BoxesManager.getBoxes(path);
+        boxes = List.of("7", "9", "8");
         List<Truck> trucks = boxesLoaderService.distributeBoxes(boxes, TRUCK_BODY_SIZE);
         assertThat(trucks).hasSize(2);
     }
